Client list added. Less cleanup.

--- a/app/views/header.html
+++ b/app/views/header.html
@@ -5,6 +5,6 @@
     </div>
     <div class="header-user">
         <span class="header-user-name" data-bind="text: navigationManager.claim().display"></span>
-        <a href="#" class="header-user-signout" data-bind="click: signout">Sign out</a>
+        <a href="#" class="link link-special header-user-signout" data-bind="click: signout">Sign out</a>
     </div>
 </header>
