--- a/app/views/shell.html
+++ b/app/views/shell.html
@@ -1,4 +1,4 @@
-﻿<div id="shell" data-bind="css: { authenticated: navigationManager.claim.isAuthorized }">
+﻿<div id="shell" class="scrollable" data-bind="css: { authenticated: navigationManager.claim.isAuthorized }">
     <!-- ko compose: { view: 'templates/controls' } --><!-- /ko -->
     <!-- ko compose: { model: 'viewmodels/header' } --><!-- /ko -->
     <!-- ko router: { transition: 'fade' } --><!-- /ko -->
