--- a/content/less/_theme.less
+++ b/content/less/_theme.less
@@ -24,3 +24,19 @@
 @header-navigation-active-color: @secondary-color;
 
 @perspective: 1px;
+
+
+
+@color-primary-special: #ec3d68;
+@color-primary-special-darker: darken(@color-primary-special, 5%);
+@color-primary-foreground: #333;
+@color-primary-background: #fff;
+
+@color-secondary-foreground: #fff;
+@color-secondary-background: #2d3e50;
+
+
+
+@color-header-navigation-item: fade(#fff, 70%);
+@color-header-navigation-item-hover: fade(#fff, 90%);
+@color-header-navigation-item-active: fade(#fff, 90%);
