--- a/content/less/_reset.less
+++ b/content/less/_reset.less
@@ -59,7 +59,7 @@ textarea {
     vertical-align: middle;
     white-space: normal;
     background: none;
-    line-height: 1;
+    font: inherit;
 
     &:focus {
         outline: 0;
